--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Math Tile Tap</title>
-    <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Custom Styling for the Policy Document */
@@ -70,7 +69,7 @@
             </p>
 
             <p class="mt-4 text-lg text-gray-700">
-                This Privacy Policy describes how the <strong>Math Tile Tap</strong> web application ("the App") handles the data you provide while using the service.
+                This Privacy Policy describes how the <strong>Math Tile Tap</strong> application ("the App") handles the data you provide while using the service.
             </p>
 
             <hr class="my-6 border-gray-200">
@@ -78,7 +77,7 @@
             <h2 class="text-2xl text-indigo-600">1. Data Collection and Storage</h2>
 
             <p class="mt-4 text-gray-700">
-                The Math Tile Tap App is designed to run entirely within your web browser. <strong>No data is transmitted to, stored on, or shared with external servers, cloud services, or any third party by the developer.</strong>
+                The Math Tile Tap App is designed to run entirely within your device's <strong>browser environment</strong>. <strong>No data is transmitted to, stored on, or shared with external servers, cloud services, or any third party by the developer.</strong>
             </p>
 
             <h3 class="text-xl text-gray-800">A. Locally Stored Data</h3>
@@ -161,7 +160,7 @@
 
             <ul class="list-disc space-y-2 mt-3 text-gray-700">
                 <li><strong>Access and Correction:</strong> You can view and edit your profile data directly through the Student Profile screen within the App.</li>
-                <li><strong>Deletion:</strong> You can delete all your stored progress for a specific player using the <strong>"Reset Player Progress"</strong> option on the start screen, or by clearing your browser's local storage for this website.</li>
+                <li><strong>Deletion:</strong> You can delete all your stored progress for a specific player using the <strong>"Reset Player Progress"</strong> option on the start screen, or by clearing your browser's local storage for this **application**.</li>
             </ul>
 
             <h2 class="text-2xl text-indigo-600">7. Changes to This Policy</h2>
