--- a/index.html
+++ b/index.html
@@ -1,175 +1,100 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Math Tile Tap</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Custom Styling for the Policy Document */
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6; /* light gray background */
-        }
-        .container {
-            max-width: 900px;
-        }
-        .policy-card {
-            background-color: #ffffff;
-            border-radius: 1rem;
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-            padding: 2rem;
-        }
-        h1 {
-            border-bottom: 3px solid #4f46e5; /* Indigo 600 */
-            padding-bottom: 0.5rem;
-            margin-bottom: 1.5rem;
-        }
-        h2 {
-            margin-top: 2rem;
-            border-left: 4px solid #f59e0b; /* Amber 500 */
-            padding-left: 0.5rem;
-            font-weight: 700;
-        }
-        h3 {
-            margin-top: 1.5rem;
-            font-weight: 600;
-        }
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            margin-top: 1rem;
-        }
-        th, td {
-            border: 1px solid #e5e7eb;
-            padding: 0.75rem;
-            text-align: left;
-        }
-        th {
-            background-color: #f9fafb;
-            font-weight: 600;
-            color: #1f2937;
-        }
-        ul {
-            list-style-type: disc;
-            margin-left: 1.5rem;
-            padding-left: 0.5rem;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Privacy Policy - Math Tile Tap</title>
+<style>
+  body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 40px; background: #fafafa; color: #333; line-height: 1.6; }
+  h1, h2 { color: #1e88e5; }
+  a { color: #1e88e5; text-decoration: none; }
+  a:hover { text-decoration: underline; }
+  table { border-collapse: collapse; width: 100%; margin-top: 10px; }
+  table, th, td { border: 1px solid #ccc; padding: 8px; }
+  th { background: #f0f0f0; }
+  footer { margin-top: 40px; font-size: 0.9em; color: #777; text-align: center; }
+</style>
 </head>
-<body class="p-6">
+<body>
+<h1>Privacy Policy for Math Tile Tap</h1>
+<p><strong>Last updated:</strong> October 27, 2025</p>
 
-    <div class="container mx-auto">
-        <div class="policy-card">
-            
-            <h1 class="text-4xl font-extrabold text-indigo-700">Privacy Policy for Math Tile Tap</h1>
+<p>Thank you for playing <strong>Math Tile Tap</strong> (the “Game”), developed by <strong>Logicant</strong> (“we,” “our,” or “us”). 
+Your privacy is important to us, and we are committed to protecting your personal data. 
+This Privacy Policy explains how we handle information when you play our Game or use any related services.</p>
 
-            <p class="text-gray-500 text-sm mt-4">
-                <strong>Effective Date: October 27, 2025</strong>
-            </p>
+<h2>1. Information We Collect</h2>
+<h3>1.1 Automatically Collected Data</h3>
+<p>When you use the Game, we may automatically collect certain information through third-party services to improve your experience and maintain the app’s functionality. 
+This may include:</p>
+<ul>
+  <li><strong>Device Information:</strong> Such as device model, operating system version, and app version.</li>
+  <li><strong>Usage Data:</strong> Anonymous statistics like game progress, level completions, crash reports, or performance data.</li>
+  <li><strong>Advertising ID:</strong> A resettable, non-personal identifier provided by Google Play services that helps deliver relevant ads and measure ad performance.</li>
+</ul>
+<p><em>Note: This information cannot be used to personally identify you.</em></p>
 
-            <p class="mt-4 text-lg text-gray-700">
-                This Privacy Policy describes how the <strong>Math Tile Tap</strong> application ("the App") handles the data you provide while using the service.
-            </p>
+<h3>1.2 Data from Third-Party Services</h3>
+<p>We may use third-party SDKs such as:</p>
+<ul>
+  <li><a href="https://support.google.com/admob/answer/6128543" target="_blank">Google AdMob</a> – to display in-game ads.</li>
+  <li><a href="https://firebase.google.com/support/privacy" target="_blank">Firebase Analytics</a> – to understand user interactions.</li>
+  <li><a href="https://policies.google.com/privacy" target="_blank">Google Play Services</a> – for platform functions.</li>
+</ul>
 
-            <hr class="my-6 border-gray-200">
+<h2>2. How We Use the Information</h2>
+<ul>
+  <li>To improve gameplay experience and performance.</li>
+  <li>To display ads relevant to users.</li>
+  <li>To analyze app stability and detect crashes.</li>
+  <li>To understand usage patterns and improve design or difficulty balancing.</li>
+</ul>
 
-            <h2 class="text-2xl text-indigo-600">1. Data Collection and Storage</h2>
+<h2>3. Data Retention and Deletion</h2>
+<p>We retain analytics and usage data only as long as necessary for app functionality. 
+You can reset your <strong>Advertising ID</strong> anytime in your Android settings: 
+<code>Settings → Google → Ads → Reset Advertising ID</code>.</p>
 
-            <p class="mt-4 text-gray-700">
-                The Math Tile Tap App is designed to run entirely within your device's <strong>browser environment</strong>. <strong>No data is transmitted to, stored on, or shared with external servers, cloud services, or any third party by the developer.</strong>
-            </p>
+<h2>4. Children’s Privacy</h2>
+<p>The Game is designed for general audiences and does not intentionally collect data from children under 13 years old. 
+If you believe a child has provided information, contact us immediately.</p>
 
-            <h3 class="text-xl text-gray-800">A. Locally Stored Data</h3>
+<h2>5. Data Sharing</h2>
+<p>We may share anonymous data with:</p>
+<ul>
+  <li>Google AdMob (for ads)</li>
+  <li>Firebase (for analytics)</li>
+</ul>
 
-            <p class="mt-2 text-gray-700">
-                All user data is stored exclusively on your device within your browser's <strong>Local Storage</strong>. This data is only accessible by the App when you use it on the same device and browser. Clearing your browser's history or cookies may delete this data.
-            </p>
+<h2>6. Security</h2>
+<p>We use standard security practices to protect your data. However, no method is 100% secure, and we cannot guarantee absolute protection.</p>
 
-            <p class="mt-4 text-gray-700">
-                The data stored locally includes:
-            </p>
+<h2>7. Permissions Used</h2>
+<table>
+  <tr><th>Permission</th><th>Purpose</th></tr>
+  <tr><td>INTERNET</td><td>To load ads and verify connectivity</td></tr>
+  <tr><td>ACCESS_NETWORK_STATE</td><td>To detect when the device is online or offline</td></tr>
+</table>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th class="w-1/4">Data Type</th>
-                        <th class="w-1/4">Purpose</th>
-                        <th class="w-1/2">Details</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><strong>Player Name</strong></td>
-                        <td>Required to identify the user and manage game progress.</td>
-                        <td>Stored as plain text.</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Game Progress</strong></td>
-                        <td>To save and resume gameplay.</td>
-                        <td>Includes current level, best score, last score, streak, accuracy, and a history of past game sessions (date, score, level, accuracy).</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Optional Profile Data</strong></td>
-                        <td>To personalize the Student Profile.</td>
-                        <td>Includes School Name, School Address, and Date of Birth (if provided by the user).</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Preferences</strong></td>
-                        <td>To remember your settings.</td>
-                        <td>Includes Dark Mode preference and Audio On/Off setting.</td>
-                    </tr>
-                </tbody>
-            </table>
+<h2>8. Your Rights</h2>
+<p>You may have rights to access or delete your data, withdraw consent for ad personalization, or contact your local authority. 
+Email us for any request at <a href="mailto:support@logicant.dev">support@logicant.dev</a>.</p>
 
-            <h2 class="text-2xl text-indigo-600">2. Use of Collected Data</h2>
+<h2>9. Third-Party Links</h2>
+<p>The Game may show ads or links to external sites. We are not responsible for their privacy policies or practices.</p>
 
-            <p class="mt-4 text-gray-700">
-                The data collected locally is used <strong>solely</strong> for the purpose of running the game and improving the user experience on your device:
-            </p>
+<h2>10. Changes to This Policy</h2>
+<p>We may update this Privacy Policy periodically. Any changes will be posted in the Game or on our website. 
+By continuing to play the Game, you accept these updates.</p>
 
-            <ul class="list-disc space-y-2 mt-3 text-gray-700">
-                <li><strong>Tracking Game Performance:</strong> To show you your current level, best score, and accuracy over time.</li>
-                <li><strong>Saving Progress:</strong> To allow you to resume your game progress (level, score) when you revisit the App.</li>
-                <li><strong>Personalization:</strong> To display your name and profile details in the Student Profile and print-out reports.</li>
-            </ul>
+<h2>11. Contact Us</h2>
+<p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+<p><strong>Email:</strong> <a href="mailto:support@logicant.dev">support@logicant.dev</a><br>
+<strong>Website:</strong> <a href="https://logicant.dev" target="_blank">https://logicant.dev</a></p>
 
-            <h2 class="text-2xl text-indigo-600">3. Data Sharing and Disclosure</h2>
-
-            <p class="mt-4 text-gray-700">
-                Because no user data is collected or stored outside of your local browser environment, there is <strong>no data sharing, disclosure, or sale</strong> to any third parties by the developer.
-            </p>
-
-            <h2 class="text-2xl text-indigo-600">4. Third-Party Services</h2>
-
-            <p class="mt-4 text-gray-700">
-                The App does not integrate with any third-party analytics services or advertising networks that collect personal data.
-            </p>
-
-            <h2 class="text-2xl text-indigo-600">5. Children's Privacy</h2>
-
-            <p class="mt-4 text-gray-700">
-                Since the App does not collect, transmit, or store any personal information externally, it complies with standards related to children's online privacy. All data, including optional profile fields, remains on the user's device.
-            </p>
-
-            <h2 class="text-2xl text-indigo-600">6. Your Data Rights</h2>
-
-            <p class="mt-4 text-gray-700">
-                Since your data is stored locally, you control it entirely:
-            </p>
-
-            <ul class="list-disc space-y-2 mt-3 text-gray-700">
-                <li><strong>Access and Correction:</strong> You can view and edit your profile data directly through the Student Profile screen within the App.</li>
-                <li><strong>Deletion:</strong> You can delete all your stored progress for a specific player using the <strong>"Reset Player Progress"</strong> option on the start screen, or by clearing your browser's local storage for this **application**.</li>
-            </ul>
-
-            <h2 class="text-2xl text-indigo-600">7. Changes to This Policy</h2>
-
-            <p class="mt-4 text-gray-700">
-                We may update our Privacy Policy from time to time. We will notify you of any changes by updating the Effective Date of this Privacy Policy. Since the App is single-serving and does not send data externally, changes will primarily concern local data handling transparency.
-            </p>
-        </div>
-    </div>
-
+<footer>
+  <p>© 2025 Logicant. All rights reserved.</p>
+</footer>
 </body>
 </html>
