--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@ By continuing to play the Game, you accept these updates.</p>
 
 <h2>11. Contact Us</h2>
 <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-<p><strong>Email:</strong> <a href="mailto:support@logicant.dev">support@logicant.dev</a><br>
-<strong>Website:</strong> <a href="https://logicant.dev" target="_blank">https://logicant.dev</a></p>
+<p><strong>Email:</strong> <a href="mailto:support@logicant.dev">admin@logicant.com</a><br>
+<strong>Website:</strong> <a href="https://logicant.com" target="_blank">https://logicant.com</a></p>
 
 <footer>
   <p>© 2025 Logicant. All rights reserved.</p>
 </footer>
 </body>
 </html>
+
