--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ If you believe a child has provided information, contact us immediately.</p>
 
 <h2>8. Your Rights</h2>
 <p>You may have rights to access or delete your data, withdraw consent for ad personalization, or contact your local authority. 
-Email us for any request at <a href="mailto:support@logicant.dev">support@logicant.dev</a>.</p>
+Email us for any request at <a href="mailto:admin@logicant.com">support@logicant.com</a>.</p>
 
 <h2>9. Third-Party Links</h2>
 <p>The Game may show ads or links to external sites. We are not responsible for their privacy policies or practices.</p>
@@ -90,7 +90,7 @@ By continuing to play the Game, you accept these updates.</p>
 
 <h2>11. Contact Us</h2>
 <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-<p><strong>Email:</strong> <a href="mailto:support@logicant.dev">admin@logicant.com</a><br>
+<p><strong>Email:</strong> <a href="mailto:admin@logicant.com">admin@logicant.com</a><br>
 <strong>Website:</strong> <a href="https://logicant.com" target="_blank">https://logicant.com</a></p>
 
 <footer>
@@ -98,4 +98,5 @@ By continuing to play the Game, you accept these updates.</p>
 </footer>
 </body>
 </html>
+
 
