--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1>Privacy Policy for Math Tile Tap</h1>
 <p><strong>Last updated:</strong> October 27, 2025</p>
 
-<p>Thank you for playing <strong>Math Tile Tap</strong> (the “Game”), developed by <strong>Logicant</strong> (“we,” “our,” or “us”). 
+<p>Thank you for playing <strong>Math Tile Tap</strong> (the “Game”), developed by <strong>Logicant Studio</strong> (“we,” “our,” or “us”). 
 Your privacy is important to us, and we are committed to protecting your personal data. 
 This Privacy Policy explains how we handle information when you play our Game or use any related services.</p>
 
@@ -98,5 +98,6 @@ By continuing to play the Game, you accept these updates.</p>
 </footer>
 </body>
 </html>
+
 
 
