--- a/index.html
+++ b/index.html
@@ -1,103 +1,179 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Privacy Policy - Math Tile Tap</title>
-<style>
-  body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 40px; background: #fafafa; color: #333; line-height: 1.6; }
-  h1, h2 { color: #1e88e5; }
-  a { color: #1e88e5; text-decoration: none; }
-  a:hover { text-decoration: underline; }
-  table { border-collapse: collapse; width: 100%; margin-top: 10px; }
-  table, th, td { border: 1px solid #ccc; padding: 8px; }
-  th { background: #f0f0f0; }
-  footer { margin-top: 40px; font-size: 0.9em; color: #777; text-align: center; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Math Tile Tap Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            color: #007bff;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 10px;
+        }
+        h2 {
+            color: #0056b3;
+            margin-top: 30px;
+        }
+        h3 {
+            color: #333;
+            margin-top: 20px;
+        }
+        p, ul, table {
+            margin-bottom: 15px;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 10px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+            font-weight: bold;
+        }
+        .effective-date {
+            font-size: 0.9em;
+            color: #666;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-<h1>Privacy Policy for Math Tile Tap</h1>
-<p><strong>Last updated:</strong> October 27, 2025</p>
 
-<p>Thank you for playing <strong>Math Tile Tap</strong> (the “Game”), developed by <strong>Logicant Studio</strong> (“we,” “our,” or “us”). 
-Your privacy is important to us, and we are committed to protecting your personal data. 
-This Privacy Policy explains how we handle information when you play our Game or use any related services.</p>
+    <h1>Math Tile Tap Privacy Policy</h1>
+    <p class="effective-date"><strong>Effective Date:</strong> October 26, 2023</p>
 
-<h2>1. Information We Collect</h2>
-<h3>1.1 Automatically Collected Data</h3>
-<p>When you use the Game, we may automatically collect certain information through third-party services to improve your experience and maintain the app’s functionality. 
-This may include:</p>
-<ul>
-  <li><strong>Device Information:</strong> Such as device model, operating system version, and app version.</li>
-  <li><strong>Usage Data:</strong> Anonymous statistics like game progress, level completions, crash reports, or performance data.</li>
-  <li><strong>Advertising ID:</strong> A resettable, non-personal identifier provided by Google Play services that helps deliver relevant ads and measure ad performance.</li>
-</ul>
-<p><em>Note: This information cannot be used to personally identify you.</em></p>
+    <p>This Privacy Policy explains how <strong>Logicant Studios</strong> ("we," "us," or "our") collects, uses, and shares information when you use the mobile application <strong>Math Tile Tap</strong> ("the App").</p>
 
-<h3>1.2 Data from Third-Party Services</h3>
-<p>We may use third-party SDKs such as:</p>
-<ul>
-  <li><a href="https://support.google.com/admob/answer/6128543" target="_blank">Google AdMob</a> – to display in-game ads.</li>
-  <li><a href="https://firebase.google.com/support/privacy" target="_blank">Firebase Analytics</a> – to understand user interactions.</li>
-  <li><a href="https://policies.google.com/privacy" target="_blank">Google Play Services</a> – for platform functions.</li>
-</ul>
+    <hr>
 
-<h2>2. How We Use the Information</h2>
-<ul>
-  <li>To improve gameplay experience and performance.</li>
-  <li>To display ads relevant to users.</li>
-  <li>To analyze app stability and detect crashes.</li>
-  <li>To understand usage patterns and improve design or difficulty balancing.</li>
-</ul>
+    <h2>1. Information We Collect</h2>
 
-<h2>3. Data Retention and Deletion</h2>
-<p>We retain analytics and usage data only as long as necessary for app functionality. 
-You can reset your <strong>Advertising ID</strong> anytime in your Android settings: 
-<code>Settings → Google → Ads → Reset Advertising ID</code>.</p>
+    <h3>A. Information You Provide (Player Profile)</h3>
+    <p>To save your game progress, enable leaderboards, and print reports, we collect the following personal information:</p>
+    <ul>
+        <li><strong>Player Name:</strong> Used for local profile identification and public leaderboards.</li>
+        <li><strong>School Name:</strong> Used for potential school-based leaderboards.</li>
+        <li><strong>Date of Birth (DOB):</strong> Collected for profile management.</li>
+    </ul>
 
-<h2>4. Children’s Privacy</h2>
-<p>The Game is designed for general audiences and does not intentionally collect data from children under 13 years old. 
-If you believe a child has provided information, contact us immediately.</p>
+    <h3>B. Game & Usage Data</h3>
+    <p>The App collects data related to your gameplay, which is stored <strong>locally</strong> and synchronized to our <strong>Game Server</strong> via API calls (e.g., <code>JSBridge.sync()</code>):</p>
+    <ul>
+        <li><strong>Game History:</strong> Date, Level, Score, Accuracy, and Best Score.</li>
+        <li><strong>Preferences:</strong> TTS Voice selection, Dark Mode setting.</li>
+        <li><strong>Unique Identifier:</strong> A user ID is generated for synchronization with the remote API.</li>
+    </ul>
 
-<h2>5. Data Sharing</h2>
-<p>We may share anonymous data with:</p>
-<ul>
-  <li>Google AdMob (for ads)</li>
-  <li>Firebase (for analytics)</li>
-</ul>
+    <h3>C. Information Collected by Third Parties (Advertising)</h3>
+    <p>The App integrates <strong>Google AdMob</strong> for serving advertisements. AdMob automatically collects information about your device and usage, which may include:</p>
+    <ul>
+        <li><strong>Device Identifiers:</strong> IP address, device type, operating system version, and advertising identifiers (e.g., Advertising ID).</li>
+        <li><strong>Ad Interactions:</strong> Information about the ads displayed, your clicks, and your interests, used to provide <strong>personalized advertising</strong>.</li>
+    </ul>
 
-<h2>6. Security</h2>
-<p>We use standard security practices to protect your data. However, no method is 100% secure, and we cannot guarantee absolute protection.</p>
+    <hr>
 
-<h2>7. Permissions Used</h2>
-<table>
-  <tr><th>Permission</th><th>Purpose</th></tr>
-  <tr><td>INTERNET</td><td>To load ads and verify connectivity</td></tr>
-  <tr><td>ACCESS_NETWORK_STATE</td><td>To detect when the device is online or offline</td></tr>
-</table>
+    <h2>2. How We Use Your Information</h2>
 
-<h2>8. Your Rights</h2>
-<p>You may have rights to access or delete your data, withdraw consent for ad personalization, or contact your local authority. 
-Email us for any request at <a href="mailto:admin@logicant.com">support@logicant.com</a>.</p>
+    <p>We use the collected information for the following purposes:</p>
 
-<h2>9. Third-Party Links</h2>
-<p>The Game may show ads or links to external sites. We are not responsible for their privacy policies or practices.</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Purpose</th>
+                <th>Description</th>
+                <th>Data Used</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><strong>Game Operation & Personalization</strong></td>
+                <td>To save and load your game progress, set your current level, and apply visual/audio preferences.</td>
+                <td>Profile Data, Game Data, Preferences</td>
+            </tr>
+            <tr>
+                <td><strong>Leaderboards & Sync</strong></td>
+                <td>To display your name, score, school name, and accuracy on the global leaderboards and back up your game data to our server.</td>
+                <td>Player Name, School Name, Game Data (Score, Accuracy, Level)</td>
+            </tr>
+            <tr>
+                <td><strong>Analytics & Reporting</strong></td>
+                <td>To track overall game performance, generate PDF reports of your history, and help you visualize your progress.</td>
+                <td>Game Data, Profile Data</td>
+            </tr>
+            <tr>
+                <td><strong>Advertising & Monetization</strong></td>
+                <td>To display advertisements within the App. This includes using third-party data for personalized ad delivery.</td>
+                <td>Device Identifiers, Ad Interactions</td>
+            </tr>
+        </tbody>
+    </table>
 
-<h2>10. Changes to This Policy</h2>
-<p>We may update this Privacy Policy periodically. Any changes will be posted in the Game or on our website. 
-By continuing to play the Game, you accept these updates.</p>
+    <hr>
 
-<h2>11. Contact Us</h2>
-<p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-<p><strong>Email:</strong> <a href="mailto:admin@logicant.com">admin@logicant.com</a><br>
-<strong>Website:</strong> <a href="https://logicant.com" target="_blank">https://logicant.com</a></p>
+    <h2>3. Data Sharing and Disclosure</h2>
 
-<footer>
-  <p>© 2025 Logicant. All rights reserved.</p>
-</footer>
+    <p>We share your information in the following ways:</p>
+    <ul>
+        <li><strong>Public Leaderboards:</strong> If you participate, your <strong>Player Name, School Name, Total Score, Average Accuracy, and Games Played</strong> are publicly visible to all App users.</li>
+        <li><strong>Service Providers (AdMob):</strong> We share your device and usage data with <strong>Google AdMob</strong> for advertising services. AdMob’s use of your data is governed by the <a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a>.</li>
+        <li><strong>Backend Server:</strong> Your Game Data is transferred to our API for synchronization and leaderboard functionality.</li>
+        <li><strong>Legal Requirements:</strong> We may disclose your information if required to do so by law or in response to valid requests by public authorities.</li>
+    </ul>
+
+    <hr>
+
+    <h2>4. Children's Privacy (COPPA Compliance)</h2>
+
+    <p>The App is primarily a child-facing educational game. We strive to comply with the Children’s Online Privacy Protection Act (COPPA).</p>
+    <ul>
+        <li><strong>Data Minimization:</strong> We only collect the minimal personal information necessary to save progress and enable the leaderboard feature.</li>
+        <li><strong>Parental Rights:</strong> If you are a parent or guardian and believe we have collected personal information from a child under 13 without appropriate consent, please contact us immediately so we can remove the data.</li>
+    </ul>
+
+    <hr>
+
+    <h2>5. Data Security</h2>
+    <p>We take reasonable technical and organizational measures to protect the information we collect and store. However, no electronic transmission or storage method is 100% secure.</p>
+
+    <hr>
+
+    <h2>6. Your Choices and Rights</h2>
+    <ul>
+        <li><strong>Data Reset:</strong> You can reset your local profile data by deleting and recreating your profile within the App, or by clearing the App's storage through your device settings.</li>
+        <li><strong>Advertising Opt-Out:</strong> You can opt-out of personalized advertising by adjusting the settings on your mobile device (e.g., opting out of interest-based ads or resetting your advertising ID).</li>
+        <li><strong>Contact Us:</strong> You have the right to request access to or deletion of the data we hold on our server.</li>
+    </ul>
+
+    <hr>
+
+    <h2>7. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new policy on this page and updating the "Effective Date" at the top.</p>
+
+    <hr>
+
+    <h2>8. Contact Us</h2>
+    <p>If you have any questions or concerns about this Privacy Policy, please contact us:</p>
+    <p><strong>Logicant Studios</strong><br>
+    <strong>Email:</strong> info@logicant.com</p>
+
 </body>
 </html>
-
-
-
